@@ -3,6 +3,7 @@
 -Better display for small screen
 -Show the default skill in skill list
 -Exit works in skill list
+-Two-player game message changes
 -Company logo :-)
 
 0.72.00 2002-NOV-07
